fixed squares getting squished

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ body {
     width: 150px;
     border: 3px solid #3882F6;
     border-radius: 10px;
-    flex: 1 1 100px;
 
 }
 
